...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/status_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="Status:"
...

    <!--
            android:text="Bids: "
            -->

    <Button
        android:id="@+id/bidsButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:text="VIEW BIDS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_header" />

    <Button
        android:id="@+id/addBidButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="108dp"
        android:text="ADD BID"
...
