...
        android:background="?android:attr/colorPrimary"
        android:gravity="center_vertical|center_horizontal"
        tools:targetApi="lollipop">


        <Button
            android:id="@+id/btn_delete_my_bid"
            style="@android:style/Widget.Button"
            android:layout_width="86dp"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
...
